# cnpip

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_EN.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  test.yml
cnpip/: __init__.py  cnpip.py  mirrors.json  mirrors.py
tests/: conftest.py  test_cli.py  test_environment.py  test_pip_config_io.py  test_pip_config_path.py  test_uv_config.py
